# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  README.md  header_template  render_engine.cpp
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
Test/: test.c
cmake_modules/: FindGLM.cmake
includes/cubemap/: cubemap.hpp
includes/diagnostics/: hrs_timer.hpp
includes/engine/: controls.hpp  display.hpp  display_manager.hpp  fps_counter.hpp  img_writer.hpp  input_manager.hpp  loader.hpp  master_renderer.hpp  mesh.hpp  model.hpp  model_loader.hpp  object.hpp  render_manager.hpp
includes/entities/: camera.hpp  light.hpp  mesh.hpp  model.hpp  object.hpp  textured_model.hpp  transform.hpp
includes/shaders/: object_shader.hpp  shader.hpp  skybox_shader.hpp  terrain_shader.hpp
includes/skybox/: cubemap.hpp  skybox.hpp
includes/terrains/: terrain.hpp
includes/utilities/: perlin_noise.hpp
resources/shaders/: basic.frag  basic.vert  basic_frag.glsl  basic_vert.glsl  default_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  terrain_frag.glsl  texture_frag.glsl  texture_vert.glsl
sources/: MainGameEngine.cpp
sources/cubemap/: cubemap.cpp
sources/diagnostics/: hrs_timer.cpp
sources/engine/: controls.cpp  display.cpp  display_manager.cpp  img_writer.cpp  input_manager.cpp  loader.cpp  master_renderer.cpp  mesh.cpp  model_loader.cpp  object.cpp  render_manager.cpp
sources/entities/: camera.cpp  light.cpp  mesh.cpp  model.cpp  object.cpp  textured_model.cpp  transform.cpp
sources/shaders/: object_shader.cpp  shader.cpp  skybox_shader.cpp  terrain_shader.cpp
sources/skybox/: cubemap.cpp  skybox.cpp
sources/terrains/: terrain.cpp
sources/utilities/: perlin_noise.cpp
